plugins {
    id 'java'
    id 'net.minecraftforge.gradle' version '6.0.+'
}

version = '1.0.0'
group = 'com.dsword91.playtime'

base {
    archivesName = 'playtime'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

minecraft {
    mappings channel: 'stable', version: '39-1.12'
    
    runs {
        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'
        }
    }
}

repositories {
    mavenCentral()
}

// Forge 1.12.2 依赖
dependencies {
    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
}

sourceSets.main.resources { srcDir 'src/main/resources' }

processResources {
    inputs.property 'version', project.version
    inputs.property 'mcversion', '1.12.2'

    from(sourceSets.main.resources.srcDirs) {
        include 'mcmod.info'
        expand 'version': project.version, 'mcversion': '1.12.2'
    }

    from(sourceSets.main.resources.srcDirs) {
        exclude 'mcmod.info'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}
